--- a/MobrandAppWall/MobrandAppWallSectionNameViewCell.xib
+++ b/MobrandAppWall/MobrandAppWallSectionNameViewCell.xib
@@ -31,6 +31,9 @@
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <connections>
+                <outlet property="txtTitle" destination="cwb-1j-PiX" id="Ghw-hw-eLB"/>
+            </connections>
             <point key="canvasLocation" x="88" y="438.5"/>
         </tableViewCell>
     </objects>
